test/programs/invalid_programs/dependent_types/incompatible_type.jm
#!TypeError

def bar(i:Int)
  puts(i)
end

def foo(o)
  bar(o)
end

foo("Hello World!")
